codex-rs/tui/src/chatwidget/snapshots/orbit_code_tui__chatwidget__tests__auth_provider_management_with_active_and_alternate.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Manage OpenAI Authentication

› 1. API Key: sk-proj*******def (active) (current)  Currently in use
  2. API Key: sk-proj*******3ab (stored)            Switch to this credential
  3. Enter new API Key                              Paste or type a new API
                                                    key
  4. Sign in with ChatGPT                           Opens your browser for
                                                    ChatGPT sign-in
  5. Sign in with Device Code                       Sign in from another
                                                    device with a one-time
                                                    code
  6. Remove credentials                             Delete all stored OpenAI
                                                    credentials

  Press enter to confirm or esc to go back
