codex-rs/tui/src/chatwidget/snapshots/orbit_code_tui__chatwidget__tests__auth_remove_credentials_confirmation.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Remove Anthropic Credentials?

› 1. Confirm: remove all Anthropic credentials  This cannot be undone
  2. Cancel                                     Keep credentials unchanged

  Press enter to confirm or esc to go back
