codex-rs/tui/src/chatwidget/snapshots/orbit_code_tui__chatwidget__tests__auth_status_popup_no_credentials.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Authentication Status
  Select a provider to manage credentials.

› 1. Manage OpenAI     not configured
  2. Manage Anthropic  not configured

  Press enter to confirm or esc to go back
