codex-rs/tui/src/chatwidget/snapshots/orbit_code_tui__chatwidget__tests__model_switch_auth_popup_active_credential.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Select Authentication for Anthropic

› 1. API Key: sk-ant-*******def (active) (current)  Use this credential
  2. Enter new API Key                              Paste or type a new API
                                                    key
  3. Sign in with Claude (OAuth)                    Opens your browser for
                                                    code-paste sign-in

  Press enter to confirm or esc to go back
